Added image assets.

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -2,7 +2,9 @@
 
 //Colors
 $white: #fff;
-$black: #000;
-$yellow: #555;
+$gnc-black: #221715;
+$gnc-red: #d71920;
+$gnc-dark-grey: #7A7C7D;
+$gnc-light-grey: #E6E5E6;
 
 //Media Queries
