--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -9,6 +9,9 @@ $gnc-red: #d71920;
 $gnc-dark-grey: #7A7C7D;
 $gnc-light-grey: #E6E5E6;
 
+//Widths and Heights
+$inner-box-width: 85.463%;
+$header-height: 68px;
 // Responsive Media Queries
 //
 // This application uses a "mobile-first" approach. In other words, NO media query is used when targeting the smallest viewport.
