--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,7 @@ html {
     background: url("#{$images}/audience-background.png") no-repeat center center fixed;
     background-size: cover;
     font-size: 14px;
+    height: 100%;
 }
 
 *, *:before, *:after {
@@ -18,11 +19,16 @@ body {
     font-family: DinCondensedBold, sans-serif;
     position: relative;
     font-size: 1em;
+    width: 100%;
+    min-height: 100vh;
+    //display: flex;
+    //flex-direction: column;
 }
 
 .outer-container {
     width: 100%;
-    height: 100vh;
+    min-height: calc(100vh - #{$header-height} - #{$footer-height});
+    height: calc(100vh - #{$header-height} - #{$footer-height});
 
     @media #{$large} {
         position: relative;
@@ -98,18 +104,17 @@ header, .inner-box {
 
 .main-content {
     font-size: 1.5em;
-    padding: 0 15px;
     @media #{$large} {
         margin-top: 45px;
     }
 }
 
 .ticket-section, .form-section {
+    padding: 0 15px;
     position: relative;
     width: 100%;
-    height: calc(100% - #{$header-height});
+    height: 100%;
     @media #{$large} {
-        height: calc(568px - #{$header-height});
         position: relative;
         width: 48%;
     }
@@ -124,7 +129,7 @@ header, .inner-box {
     margin: 0 auto;
     height: 197px;
     background: url("#{$images}/ticket-to-rock-banner.png") no-repeat center center;
-    width: 90%;
+    width: 85%;
     background-size: contain;
 
     @media #{$large} {
@@ -158,5 +163,21 @@ header, .inner-box {
     &.cash {
         background-image: url("#{$images}/icons/airplane-icon.png");
     }
+}
 
+footer {
+    height: $footer-height;
+    width: 100%;
+    background-color: #000;
+    position: fixed;
+    bottom: 0;
+}
+
+.crowd {
+    height: 200px;
+    width: 100%;
+    background: url("#{$images}/crowd.png") repeat no-repeat center bottom;
+    background-size: contain;
+    position: fixed;
+    bottom: calc(#{$footer-height} - 2px);
 }
