--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -9,7 +9,7 @@ $gnc-red: #d71920;
 $gnc-dark-grey: #7A7C7D;
 $gnc-light-grey: #E6E5E6;
 
-//Widths and Heights
+//Heights and Widths
 $inner-box-width: 85.463%;
 $header-height: 68px;
 $footer-height: 5%;
