Minor formatting and documentation.

--- a/src/sass/css/fonts.css
+++ b/src/sass/css/fonts.css
@@ -1,3 +1,7 @@
+/**
+ * Author: Steven Dunn
+ * Date Created: April 15, 2017
+ **/
 @font-face {
   font-family: 'MochaMattari';
   src: url("/src/fonts//MochaMattari.eot"), url("/src/fonts//MochaMattari.woff") format("woff"), url("/src/fonts//MochaMattari.ttf") format("truetype"), url("/src/fonts//MochaMattari.svg") format("svg");
