--- a/src/sass/fonts.scss
+++ b/src/sass/fonts.scss
@@ -1,4 +1,10 @@
+/**
+ * Author: Steven Dunn
+ * Date Created: April 15, 2017
+ **/
+
 $font-path: "/src/fonts/";
+
 @font-face {
     font-family: 'MochaMattari';
     src: url('#{$font-path}/MochaMattari.eot'),
