--- a/src/sass/mixins.scss
+++ b/src/sass/mixins.scss
@@ -1,4 +1,9 @@
-//Vertically and horizontally center child elements (i.e. flex-items)
+/**
+ * Author: Steven Dunn
+ * Date Created: April 15, 2017
+ **/
+
+// Vertically and horizontally center child elements (i.e. flex-items)
 @mixin flex-center {
     display: flex;
     justify-content: center;
